# OpenU-C-Project

./: CMakeLists.txt  assembler  macro_expand  makefile  readme.md  test.am  test_01.am  test_01.as  test_02.as  test_03.am  test_03.as  test_04.am  test_04.as  test_05.am  test_05.as  testprog.as
Header_Files/: assembler.h  codegen.h  data_handler.h  errors.h  first_pass.h  globals.h  instruction_tables.h  macro_expand.h  macro_processor.h  matanMacro.h  output.h  parser.h  parser_old.h  second_pass.h  symbol_table.h  utils.h
Output_Files/: test_01.ent  test_01.ext  test_01.ob  test_03.ext  test_03.ob  test_04.ext  test_04.ob
Source_Files/: assembler.c  backup.c  codegen.c  data_handler.c  errors.c  first_pass.c  first_pass_func.c  instruction_tables.c  macro_expand.c  macro_proc.c  main.c  output.c  parser.c  second_pass.c  symbol_table.c  utils.c
